--- a/benches/netbench/Cargo.toml
+++ b/benches/netbench/Cargo.toml
@@ -17,7 +17,7 @@ hdrhist = "0.5"
 hermit = { path = "../../hermit", default-features = false }
 
 [features]
-default = ["hermit/acpi", "hermit/pci", "hermit/smp", "hermit/tcp"]
+default = ["hermit/acpi", "hermit/pci", "hermit/smp", "hermit/tcp", "hermit/pci-ids", "hermit/fsgsbase"]
 
 [[bin]]
 name = "server-bw"
